--- a/Admixture_Time_Inference_Paper_Draft.Rmd
+++ b/Admixture_Time_Inference_Paper_Draft.Rmd
@@ -55,13 +55,13 @@ text-align: justify}
 
 #Introduction
 
-Detecting admixture, i.e. gene flow between previously isolated populations can shed light into the complex evolutionary history of populations. The sequencing of the Neandertal [@green_draft_2010] and Denisovan [@reich_genetic_2010] genome revealed admixture events between Neandertals and  modern humans outside of Africa  [@green_draft_2010; @prufer_complete_2013; @fu_early_2015; @fu_genome_2014; @sankararaman_genomic_2014;@prufer_high-coverage_2017], as well as a second admixture event between Denisovans and Asian populations [@reich_genetic_2010; @meyer_high-coverage_2012; @sankararaman_combined_2016; @vernot_excavating_2016]. 
+Detecting admixture, i.e. gene flow between previously isolated populations can shed light into the complex evolutionary history of populations. It is an important factor in specialization events and is found in many sexually reproducing species of plants, invertebrates and vertebrates [@abbott_hybridization_2013], such as an ancient admixture event in the primate lineage between chimpanzees and bonobos [@manuel_chimpanzee_2016]. The sequencing of the Neandertal [@green_draft_2010] and Denisovan [@reich_genetic_2010] genome revealed admixture events between Neandertals and  modern humans outside of Africa  [@green_draft_2010; @prufer_complete_2013; @fu_early_2015; @fu_genome_2014; @sankararaman_genomic_2014;@prufer_high-coverage_2017], as well as a second admixture event between Denisovans and Asian populations [@reich_genetic_2010; @meyer_high-coverage_2012; @sankararaman_combined_2016; @vernot_excavating_2016]. 
 <!-- [could be expanded, e.g. referring to other systems where people look at admixture] -->
 <!-- speciation and hibridazation review [@abbott_hybridization_2013] -->
 <!-- chimp bonobo admixture [@manuel_chimpanzee_2016] -->
 
 ##Admixture on the genomic level and basic idea how to date it
-On the genomic level, admixture introduces highly divergent chromosomal segments into the admixing population. Over time, recombination between parental chromosomes progressively break the introgressed segments apart, reducing their length in each generation [@falush_inference_2003]. Under a constant recombination rate, the length of introgressed segments should be inversely proportional to the time since the admixture event. Assuming that recombination events occurr according to a Poisson process, the fragment length distribution can be approximated by an exponential distribution, [whose parameter is informative about] the number of generations since the fragments entered the admixing population [@moorjani_history_2011;@pool_inference_2009]. Hence, the length distribution of introgressed chromosomal segments ('recombination clock') has been used to inferred the time since the admixture event [@pool_inference_2009; @gravel_population_2012] 
+On the genomic level, admixture introduces highly divergent chromosomal segments into the admixing population. Over time, recombination between parental chromosomes progressively break the introgressed segments apart, reducing their length in each generation [@falush_inference_2003]. Under a constant recombination rate, the length of introgressed segments should be inversely proportional to the time since the admixture event. Assuming that recombination events occurs according to a Poisson process, the fragment length distribution can be approximated by an exponential distribution, whose parameter is informative about the number of generations since the fragments entered the admixing population [@moorjani_history_2011;@pool_inference_2009; @gravel_population_2012]. Hence, the length distribution of introgressed chromosomal segments ('recombination clock') has been used to inferred the time since the admixture event [@moorjani_history_2011;@pugach_dating_2011; @sankararaman_date_2012;@loh_inferring_2013;@sankararaman_combined_2016;@pugach_gateway_2018;@jacobs_multiple_2019] 
 <!-- [add more papers].  -->
 
 To do this, the model usually assumes a one generation long admixture event followed by a period of isolation [@liang_lengths_2014]. The proportion of admixture of individuals in the admixed population is assumed to be identical, tracts are rare and inbreeding is not significant, such that admixture segments do not recombine with each other to form longer segments [@pool_inference_2009].  The effect of drift is assumed to be negligible [@loh_inferring_2013], the introgressed segments act neutral [@shchur_distribution_2019] and the recombination rate does not change over time [@gravel_population_2012].
@@ -80,16 +80,23 @@ As recombination breaks the introgressed chromosomal segments apart each generat
 The other approach first tries to infer introgressed haplotypes directly, by partitioning an individuals genome into admixture segments [@gravel_population_2012; @price_sensitive_2009; @lawson_inference_2012]. Multiple methods are available focusing on different characteristics of introgressed haplotypes, such as LD patterns and density of derived variants, to infer them [@lawson_inference_2012; @racimo_signatures_2017; @seguin_orlando_paleogenomics_2014; @vernot_excavating_2016; @sankararaman_combined_2016; @skov_detecting_2018]. In the second step, the length distribution of these directly inferred introgressed haplotypes can be used for dating by fitting an exponential distribution to it.
 
 ##Dates of archaic introgression obtained so far
-The two approaches were used to estimate the Neandertal human admixture to be 37,000–86,000 yBP (years before present)[how about years ago ya, to avoid confusing with bp as base pairs] [@sankararaman_date_2012] as well as 40,510–54,454 yBP (95% CI) [@moorjani_genetic_2016] using modern day genomes and 50,000 to 60,000 yBP using an ancient genome [@fu_genome_2014]. An additional contemporaneous admixture event between Neandertals and East-Asian populations was suggested to explain the higher amount of Neandertal ancestry in these populations [@kim_selection_2015; @vernot_complex_2015]. The Denisovan human admixture was dated to be between 44,000–54,000 yBP using modern day genomes [@sankararaman_combined_2016]. Analysing Papuan individuals revealed two time separated admixture events, one in line with previous estimates at 45.7 kyBP (95% CI 31.9-60.7 kyBP) and one exclusive to Papuans dated to be around 29.8 kya (95% CI 14.4-50.4 kya) [@jacobs_multiple_2019]. An additional Denisovan admixture event was suggested for East-Asian populations by identifying Denisovan segments, which are more diverged from the Denisovan high-coverage genome then previously found segments [@browning_analysis_2018]. Comparing the mean length of the two groups of segments introgressed from divergent Denisovan populations did, however, not reveal significant differences, suggesting a lack of power to distinguish the two events by time [@browning_analysis_2018; @jacobs_multiple_2019]. 
-<!-- [present this a sentence or two earlier]. -->
+The two approaches were used to estimate the Neandertal human admixture to be 37,000–86,000 ya (years ago) [@sankararaman_date_2012] as well as 40,510–54,454 ya (95% CI) [@moorjani_genetic_2016] using modern day genomes and 50,000 to 60,000 ya using an ancient genome [@fu_genome_2014]. An additional contemporaneous admixture event between Neandertals and East-Asian populations was suggested to explain the higher amount of Neandertal ancestry in these populations [@kim_selection_2015; @vernot_complex_2015]. The Denisovan human admixture was dated to be between 44,000–54,000 ya using modern day genomes [@sankararaman_combined_2016]. An additional Denisovan admixture event was suggested for East-Asian populations by identifying Denisovan segments, which are more diverged from the Denisovan high-coverage genome then previously found segments [@browning_analysis_2018]. Comparing the mean length of the two groups of segments introgressed from divergent Denisovan populations did, however, not reveal significant differences, suggesting a lack of power to distinguish the two events by time [@browning_analysis_2018; @jacobs_multiple_2019]. Analysing genomes from Papuan individuals revealed two time separated admixture events with Denisovan, one in line with previous estimates at 45.7 kya (95% CI 31.9-60.7 kya) and one exclusive to Papuans dated to be around 29.8 kya (95% CI 14.4-50.4 kya) [@jacobs_multiple_2019].
 
 <!-- [I would move the intro paragraph ] -->
 
+<!-- What does admixture pulse mean? is it distingushable from a continuous admixtuer? -->
+<!-- the time of the last GF is relevant for Neandertal extinction, hence the extrema of the distribition more important then mean time -->
+
+##What we want to do
+Here we want to further investigate archaic admixture dates. Especially focusing on the Neandertal admixture into modern humans. Archaic admixture events are assumed to be long time in the past, with few, potentially distantly related genomes available from the archaics as proxies for the true introgressing population. We want to investigate the effect of the model and data assumptions on the obtained dates. We are particularly interested in modeling long continuous admixture between Neandertals and modern humans instead of a one generation pulse. Thereby we want to resolve what does a time estimate of a pulse mean, is it distinguishable from a continuous admixture distribution over multiple hundred generations. This could hold implications about the contact between Neandertals and modern humans, e.g. was gene flow a single isolated incident or common over the whole time of their co-existence. Neandertals and modern human populations overlapped in some regions for a long period of time [@higham_timing_2014], potentially resulting in continuous admixture over hundreds of generations. We are especially interested in the extrema of a continuous admixture distribution, since the start and end point can inform us about the first contact between humans and Neandertals and the time of extinction of Neandertals.
+
+
 ##Assumptions on the data
-Both approaches, the direct measure of the segment length and the indirect ALD based method, without first directly inferring introgressed segments such as the popular ALDER method [@loh_inferring_2013], rely on some fairly strong modelling assumptions [@pool_inference_2009; @gravel_population_2012; @liang_lengths_2014], which might bias the estimates when violated. [this is a bit of a trivial statement. Maybe make it more positive?]
+Both approaches, the direct measure of the segment length and the indirect ALD based method, without first directly inferring introgressed segments such as the popular ALDER method [@loh_inferring_2013], rely on some fairly strong modelling assumptions [@pool_inference_2009; @gravel_population_2012; @liang_lengths_2014]. We want to investigate which of these assumptions can be relaxed without causing a strong bias in the estimate.
+<!-- last sentence changed to be more positive by Ben's recommendationc -->
 
 ### Segments are is independent and identically exponentially distributed
-First, it is assumed that the length of the introgressed segments is independent and identically exponentially distributed. This means that the number of ancestors per admixed individual is identical, such that the proportion of introgressed segments is equal among the individuals. This  however is not true for Neandertal admixture in non-African population [@vernot_complex_2015]. [how is it not true?] Segments are independent such that segments of the same ancestor do not recombine to form longer segments. Liang and Nielsen 2014 showed that the  violation of the independent and identically exponentially distributed segments length assumption can downward bias admixture time estimates when the true admixture time is very recent, the number of ancestors is small or the admixing population is small. This increases the chance of admixture segments to recombine into a larger segment mimicking a segment length distribution of a more recent admixture [@liang_lengths_2014].
+First, it is assumed that the length of the introgressed segments is independent and identically exponentially distributed. This means that the number of ancestors per admixed individual is identical, such that the proportion of introgressed segments is equal among the individuals. This however is not true for Neandertal admixture in non-African population, since East-Asian population where fund to carry more Neandertal ancestry than other non-African populations [@vernot_complex_2015]. Segments are independent such that segments of the same ancestor do not recombine to form longer segments. Liang and Nielsen 2014 showed that the  violation of the independent and identically exponentially distributed segments length assumption can downward bias admixture time estimates when the true admixture time is very recent, the number of ancestors is small or the admixing population is small. This increases the chance of admixture segments to recombine into a larger segment mimicking a segment length distribution of a more recent admixture [@liang_lengths_2014].
 
 ### Recombination Map
 Second, it is assumed that the recombination rate is known. Since the recombination is used as a clock the correct genetic distance between introgressed segments or variants on the segments has to be known.[this is a repeat] Recombination maps are used to assign the genetic length between introgressed segments/variants. Different maps are available[add refs]. 
@@ -99,27 +106,21 @@ Either focusing on short term information by using parent-offspring data to dire
 Different genetic maps are highly correlated on a megabase scale but reveal significant population differences on a finer scale [@kong_fine-scale_2010; @hinch_landscape_2011]. The average length of Neandertal introgressed segments is approximately 50 kb [@sankararaman_date_2012], and so fine-scale recombination maps are essential. Furthermore, recombination maps can also vary over time [@auton_fine-scale_2012]. These uncertainties in the genetic map were found to downward bias the time estimates by missing certain recombination events resulting in assuming introgressed segments longer than they actually are [@sankararaman_date_2012].  Sankararaman et al. 2012 suggested a method for accounting for uncertainty in the recombination map by estimating a correction parameter for a given recombination map by comparing the distances between a pair of markers in the map to the number of crossovers that span those markers as observed in a pedigree map. This however limits the applicability of the method, since it requires a population-specific map as well as a pedigree based map to estimate the error in the map [@sankararaman_date_2012; @fu_genome_2014; @sankararaman_combined_2016].
 
 ### Demography
-A thirs issue are assumptions about the demography. 
-<!-- [explain how demography would bias gene flow estimates]  -->
-
-Figure \ref{fig:Intro_fig} B shows two possible demographies for the Neandertal admixture, a simplified one without no population changes and a more complex one including structured populations, bottlenecks and additional gene flow. These demographies can have an influence on admixture time estimates since demographic events can create false signals of archaic introgression [how]. Various processes such as extreme reduction in population sizes of the admixing population can create non-admixture LD [@schaper_linkage_2012]. Substructure in an ancestral human population, where human population in Africa are subdivided with a low migration rate, as shown in Figure \ref{fig:Intro_fig} B, can also introduce divergent chromosomal segment with variants in strong LD, mimicking Archaic introgressed segments [@nei_linkage_1973;@pfaff_population_2001]. Moreover additional gene flow after the Neandertal admixture event between the African and admixed non-African population was shown to potentially influence the detected amount of Neandertal ancestry [@petr_limits_2019] as well as the time estimates [@sankararaman_date_2012]. 
+A third issue are assumptions about the demography. Demographic processes can create similar genomic signals as admixture. Genomic segments carrying these signals can falsely be included in the estimate of the length distribution of admixed segments, leading to a bias. Admixture segments can also get lost by genetic drift, making it harder to estimate the length distribution. Figure \ref{fig:Intro_fig} B shows two possible demographies for the Neandertal admixture, a simplified one without no population changes and a more complex one including structured populations, bottlenecks and additional gene flow. The extreme reduction in population sizes of the admixing population can create non-admixture LD [@schaper_linkage_2012]. Substructure in an ancestral human population, where human population in Africa are subdivided with a low migration rate, as shown in Figure \ref{fig:Intro_fig} B, can also introduce divergent chromosomal segment with variants in strong LD, mimicking Archaic introgressed segments [@nei_linkage_1973;@pfaff_population_2001]. Moreover additional gene flow after the Neandertal admixture event between the African and admixed non-African population was shown to potentially influence the detected amount of Neandertal ancestry [@petr_limits_2019] as well as the time estimates [@sankararaman_date_2012]. 
 <!-- Not sure about the last sentence -->
-<!-- Variants and segments can aslo drift out in small populations -->
+<!-- Drift biasing admixture citation needed -->
 
 ### Ascertainment
 An additional bias might be introduced in the ALD based dating method since it requires ascertaining the SNPs for admixture informative sites, especially for archaic admixture [@sankararaman_date_2012; @fu_genome_2014]. The problem here is that introgressed variants from the ancestral archaic population are ascertained using only a few sequenced archaic individuals as proxies for the actual introgressing archaic population. These individuals are potentially only distantly related to the introgressing population, which might result in missing introgressed variants. 
 <!-- What to cite for the last sentence?? -->
 
 ### Pulse model
-Finally, the admixture is assumed to happened in only a single generation [@moorjani_history_2011]. This single pulse is mathematically convenient since all the introgressed segments entering in this single generation can be modeled using a single exponential distribution. This however limits the information gained form the dating since in case of a multi-generation long admixture the single-pulse model results in a mean admixture time between start end end of the gene flow. Ideally one would like to obtain the start and end, hence the duration of admixture between Neandertals and non-African populations. This could hold implications about the contact between Neandertals and modern humans, e.g. was gene flow a single isolated incident or common over the whole time of their co-existence. Neandertals and modern human populations overlapped in some regions for a long period of time [@higham_timing_2014], potentially resulting in continuous admixture over hundreds of generations.
+Finally, the admixture is assumed to happened in only a single generation [@moorjani_history_2011]. This single pulse is mathematically convenient since all the introgressed segments entering in this single generation can be modeled using a single exponential distribution. This however limits the information gained form the dating since in case of a multi-generation long admixture the single-pulse model results in a mean admixture time between start end end of the gene flow. Ideally one would like to obtain the start and end, hence the duration of admixture between Neandertals and non-African populations. 
 If admixture is happening over $n$ generations, this results in a mixture of $n$ different exponential distribution one for each set of introgressed segments per generation [@pickrell_ancient_2014].  Previous studies tried to model this, using the ALD, by assuming not a continuous admixture but summarizing it into different independent events. In this case, the decay curve is comprised out of $n$ different exponential terms, each for one admixture event [@pickrell_ancient_2014; @zhou_inference_2017]. Methods were introduced to model continuous admixture using a polynomial function with the number of coefficients related to the number of generations of continuous admixture [@zhou_modeling_2017]. These models however work best with recent admixture, in the last 100 generations, with a substantial admixture proportion of around 0.3 [@zhou_modeling_2017]. This is outside of the range for scenarios of Neandertal admixture, were the admixture proportion is around 0.03 and the timing around 1500 generations ago [@sankararaman_date_2012;@prufer_complete_2013;@sankararaman_genomic_2014].
 <!-- zhou_modeling_2017-tested on simulations with no changes in Ne, Admixture proportion of 30% and uniform recombnation [@zhou_modeling_2017]-->
 <!-- Fitting this polynomial functions is not trivial -->
 
-<!-- What does admixture pulse mean? is it distingushable from a continuous admixtuer? -->
-<!-- the time of the last GF is relevant for Neandertal extinction, hence the extrema of the distribition more important then mean time -->
-
-Here we aim to evaluate admixture time estimates, whereby we focus on a well studied example of archaic admixture into modern humans. Those admixture events are assumed to be long time in the past, with few, potentially distantly related genomes available from the archaics as proxies for the true introgressing population. We are particularly interested in scenarios of long continuous gene flow between Neandertals and human populations and its signals in the ALD distribution. We introduce a model for continuous admixture, where the migration rate over time is Gamma distributed with two parameters, one for the mean time of continuous admixture and one for the duration of the admixture. First, we examining the effect of long continuous admixture on the admixture time estimates in comparison to the effects of the aforementioned model assumptions. Therefore, we quantitatively evaluate the effect of the admixture model, recombination, demography and analysis parameters on the inference. Second, we define the expectation of the resulting segment length distribution for continuous Gama distributed admixture being Lomax distributed, holding a parameter for the duration of admixture. This expectation works for both methods to infer the segments length, either directly or by using the ALD decay. Using this model, we investigate under which scenarios the parameters of the Lomax-distribution can be  accurately  estimated and for which parameters we can distinguish a pulse-like admixture event from a continuous event. Together this critically evaluates the current state of knowledge about different aspects of archaic admixture time.
+We introduce a model for continuous admixture, where the migration rate over time is Gamma distributed with two parameters, one for the mean time of continuous admixture and one for the duration of the admixture. First, we examining the effect of long continuous admixture on the admixture time estimates in comparison to the effects of the aforementioned model assumptions. Therefore, we quantitatively evaluate the effect of the admixture model, recombination, demography and analysis parameters on the inference. Second, we define the expectation of the resulting segment length distribution for continuous Gama distributed admixture being Lomax distributed, holding a parameter for the duration of admixture. This expectation works for both methods to infer the segments length, either directly or by using the ALD decay. Using this model, we investigate under which scenarios the parameters of the Lomax-distribution can be  accurately  estimated and for which parameters we can distinguish a pulse-like admixture event from a continuous event. Together this critically evaluates the current state of knowledge about different aspects of archaic admixture time.
 
 
 ```{r Intro_fig,message=FALSE, echo=FALSE,warning=FALSE,fig.align="center",out.width="95%",fig.pos="H",fig.cap="\\label{fig:Into_fig} A) Chromosomal sections with introgressed segments (grey). Introgressed variants (green circles) are in high LD compared to the background (stars). The ALD approach estimates linkage between the introgressed variants, wheres the haplotype  approach tries to estimate the segment directly. B) Two possible demographies of humans splitting into African population (AFR) and non-African (non-AFR) with admixture from Neandertals (NEA) into non-Africans. The simple demographic model with constant population sizes and the complex with rapid population size changes (1), substructure in Africa, where after an initial earlier split and isolation the structured population exchange migrants till the out-of-Africa event (2) and additional gene flow between Africans and non-Africans after the Neandertal admixture (3)."}
@@ -134,9 +135,10 @@ include_graphics(path = 'Paper_Graphics_2.png',auto_pdf = T)
 
 We conducted various simulations to assess the effect of continuous admixture compared to a pulse under ideal circumstances. We changed recombination and demographic parameters to simulate more realistic models. We compared the effect of these parameters together with analysis parameters to the effect of continuous admixture on the estimates. After assessing these effects we evaluate the possible parameter range for using a Lomax distribution to fit the ALD decay, enabling to obtain a duration of continuous admixture.
 <!-- Only draft paragraph!!!! -->
+
 ##Simulations
 
-We used the msprime coalescent simulator [@kelleher_efficient_2016] for simulations with sample sizes chosen to reflect presently available data: We simulate 176  diploid African individuals and  170 diploid non-Africans, corresponding to the number of haploid Yoruba (YRI) and Central Europeans from Utah (CEU) sequences in the 1000 Genomes project data [@the_1000_genomes_project_consortium_global_2015]. Since three high coverage Neandertal sequences are available [@prufer_complete_2013;@prufer_high-coverage_2017] we choose to simulate three diploid genomes. For each individual we simulated 20 chromosomes with a length of 150 Mb each. The mutation rate was set for all simulations to $2*10^{-8}$ per base per generation. The recombination rate was set to $1*10^{-8}$  per base pair per generation unless specified otherwise. The demographic parameters are based on previous studies dating Neandertal admixture [@sankararaman_date_2012;@fu_genome_2014;@moorjani_genetic_2016]. In the “simple” model (Figure \ref{fig:Intro_fig} B), the  effective population size is assumed constant at Ne=10000 for all populations, the split time between modern humans and Neandertals is 10000 generations ago and a split time between Africans and non-Africans is 2550 generations ago. The migration rate from Neandertals into non-Africans was set to zero before the split from Africans, to ensure no Neandertal ancestry in Africans. Each simulation was repeted 100 times.
+We used the msprime coalescent simulator [@kelleher_efficient_2016] for simulations with sample sizes chosen to reflect presently available data: We simulate 176  diploid African individuals and  170 diploid non-Africans, corresponding to the number of haploid Yoruba (YRI) and Central Europeans from Utah (CEU) sequences in the 1000 Genomes project data [@the_1000_genomes_project_consortium_global_2015]. Since three high coverage Neandertal sequences are available [@prufer_complete_2013;@prufer_high-coverage_2017] we choose to simulate three diploid genomes. For each individual we simulated 20 chromosomes with a length of 150 Mb each. The mutation rate was set for all simulations to $2*10^{-8}$ per base per generation. The recombination rate was set to $1*10^{-8}$  per base pair per generation unless specified otherwise. The demographic parameters are based on previous studies dating Neandertal admixture [@sankararaman_date_2012;@fu_genome_2014;@moorjani_genetic_2016]. In the “simple” model (Figure \ref{fig:Intro_fig} B), the  effective population size is assumed constant at Ne=10000 for all populations, the split time between modern humans and Neandertals is 10000 generations ago and a split time between Africans and non-Africans is 2550 generations ago. The migration rate from Neandertals into non-Africans was set to zero before the split from Africans, to ensure no Neandertal ancestry in Africans. Each simulation was repeated 100 times.
 
 
 ###Gene Flow
@@ -185,7 +187,7 @@ Equation (Eq. \ref{eq:4}) shows the relationships between the distribution param
 
 ###Recombination map
 
-Uncertainties in the recombination map were priviously shown to bias admixture time etimates.
+Uncertainties in the recombination map were previously shown to bias admixture time estimates.
 To investigate the effect of more realistic recombination rate variation we simulated using a recombination map. We either used the African-American-Map [@hinch_landscape_2011] or the HapMap phase 3 [@noauthor_second_2007] for simulations under a variable recombination rate, for simplicity, we used the same recombination map (150 Mb of chromosome 1, excluding the first 10 Mb) for all simulated chromosomes.  The mean recombination rate was calculated from the 150 Mb map ($1.843 \, \frac{cM}{Mb}$ AAMap and $1.549 \, \frac{cM}{Mb}$ HapMap). To emulate uncertainties in the genetic map we either used the mean recombination rate from the respective map to calculate the genetic position from the physical position for each SNP, used linear interpolation based on the other map (e.g. AAMap used for the msprime simulation and HapMap used to assign genetic distances) or used the same map for simulation and assigning genetic distances. 
 
 
@@ -203,7 +205,7 @@ Ascertainment schemes are used to select certain variable positions of interest 
 
 ###ALD calculation and curve fitting
 
-The pairwise weighted LD between the ascertained SNPs a certain genetic distance $d$ apart was calculated using ALDER [@loh_inferring_2013]. A minimal genetic distance $d_0$ between SNPs is set either to 0.02 cM and 0.05 cM. This minimal distance cutoff removes extrem short range LD likely confounded by non-ALD, facilitating the fitting procedure. To obtain the mean time estimates the data is fitted with an exponential distribution shown in equation \ref{eq:5}, using a non-linear least-square optimization algorithm implemented in R [@R_Core_Team_2019]. Where *A* is the intercept, $t$ the time since the admixture event in generations, *d* the genetic distance in cM and *c* is a constant modeling background LD. The model was fitted following Moorjani et al 2016 [@moorjani_genetic_2016]. The duration of continuous admixture is modeled using the Lomax fit shown in Eq. \ref{eq:6}. We used the notation from Kozubowski et al. 2008 [@Kozubowski_2008_TestingEV]. The starting value of $t$ is taken from the exponential fit to ensure convergence of the model. Model validity diagnostics like distribution of residuals, residuals plotted against fitted values and model stability diagnostics like dfbetas were checked for selected simulations and showed no obvious deviations from the model assumptions [@quinn_experimental_2002]. To compare the two nested models we used Akaike's information criterion (AIC) measuring the goodness of fit while penalizing the addition of new parameters $p$ and thus controlling for under- and overfitting (Eq. \ref{eq:7}).
+The pairwise weighted LD between the ascertained SNPs a certain genetic distance $d$ apart was calculated using ALDER [@loh_inferring_2013]. A minimal genetic distance $d_0$ between SNPs is set either to 0.02 cM and 0.05 cM. This minimal distance cutoff removes extreme short range LD likely confounded by non-ALD, facilitating the fitting procedure. To obtain the mean time estimates the data is fitted with an exponential distribution shown in equation \ref{eq:5}, using a non-linear least-square optimization algorithm implemented in R [@R_Core_Team_2019]. Where *A* is the intercept, $t$ the time since the admixture event in generations, *d* the genetic distance in cM and *c* is a constant modeling background LD. The model was fitted following Moorjani et al 2016 [@moorjani_genetic_2016]. The duration of continuous admixture is modeled using the Lomax fit shown in Eq. \ref{eq:6}. We used the notation from Kozubowski et al. 2008 [@Kozubowski_2008_TestingEV]. The starting value of $t$ is taken from the exponential fit to ensure convergence of the model. Model validity diagnostics like distribution of residuals, residuals plotted against fitted values and model stability diagnostics like dfbetas were checked for selected simulations and showed no obvious deviations from the model assumptions [@quinn_experimental_2002]. To compare the two nested models we used Akaike's information criterion (AIC) measuring the goodness of fit while penalizing the addition of new parameters $p$ and thus controlling for under- and overfitting (Eq. \ref{eq:7}).
 
 \begin{equation}
 \label{eq:5}
@@ -607,7 +609,7 @@ ggarrange(P1_1,P1_2,
 
 ##Comparing effect sizes
 
-Having established that the duration of continuous admixture under ideal circumstances is only marginally influencial on admixture time estimates, we deploi more realistic simulation scenarios.
+Having established that the duration of continuous admixture under ideal circumstances is only marginally influential on admixture time estimates, we deploy more realistic simulation scenarios.
 Specifically, we investigated the influence of two analysis parameter by changing the ascertainment scheme to a higher-enrichment scheme requiring additional to the LES non-Africans to be polymorphic at a SNP, and applying a larger minimal distance of 0.05 cM between SNPs used for the fitting of the exponential distribution. Additionally, we changed the demographic model from a simple to a complex one based on inferred effective population sizes and time points taken from MSMC estimates for Africans and non-Africans and PSMC estimates for the simulated Neandertals. Split times between the population where unchanged and Neandertals were sampled 750 generations before the modern humans to simulate branch shortening. We further applied the African-American-Map to simulate varying recombination rates across the 150 Mb long chromosomes, instead of a constant rate. We simulated every combination of these parameter sets resulting in 32 different sets with 100 replications each (Supp. Fig. \ref{fig:figS1}). A Gaussian linear model was applied to estimate effect sizes of the four predictors being ascertainment scheme, minimal distance, demography and recombination on the bias of admixture estimates (Supplement Table \ref{tab:tableS1}). Figure \ref{fig:fig3} shows the comparison of the bias on admixture time estimates between the previously used model (ascertainment = LES, $d_{0} = 0.02 cM$, demography = simple and recombination = constant) further refereed to as the standard model and a model with one of the four parameter changed, respectively and the corresponding model prediction. The previously observed overestimation of the standard model was estimated to be 122 (+7/-7) generations. Every parameter change results in lower estimates compared to the standard model, with the biggest difference between a constant and a varying recombination (-863 +5/-6 generations) and the smallest differences between a pulse and continuous gene flow model (-40 +5/-6 generations). Most accurate estimates are achieved using the LES ascertainment scheme in combination with a minimal distance of 0.05 cM. These analysis parameter combination shows more robustness towards changes in the demography (Supplement Figure 1).
 
 ```{r message=FALSE, echo=FALSE,warning=FALSE}
@@ -623,10 +625,12 @@ Simple_D_Sim_1$Recomb.rate <- "0_constant"
 Simple_D_Sim_2 <- Results_Table("~/Desktop/ATE_Paper/Admixture_Time_Inference_Paper/Results_Fig_1_2/Result_file_SIM_Raw_ALDER-Fit-Fig_2_A-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0.txt")
 Simple_D_Sim_2$Demography <- "0_Simple"
 Simple_D_Sim_2$Recomb.rate <- "0_constant"
+
 Inferred_D_Sim_1 <- Results_Table("~/Desktop/ATE_Paper/Admixture_Time_Inference_Paper/Results_Fig_1_2/Result_file_SIM_Raw_ALDER-Fit-Fig_2_B-GF_Model_IV-min_dist_Fit-0.02-ascertainment-0.txt")
 Inferred_D_Sim_1$Demography <- "Inferred"
 Inferred_D_Sim_1$Recomb.rate <- "0_constant"
-Inferred_D_Sim_2 <- Results_Table("~/Desktop/ATE_Paper/Admixture_Time_Inference_Paper/Results_Fig_1_2/Result_file_SIM_Raw_ALDER-Fit-Fig_2_B-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0.txt")
+Inferred_D_Sim_2 <- Results_Table("~/Desktop/ATE_Paper/Admixture_Time_Inference_Paper/Results_Fig_1_2/Result_file_SIM_Raw_ALDER-Fit-Fig_2_B_complex-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0.txt")
+#Inferred_D_Sim_2 <- Results_Table("~/Desktop/ATE_Paper/Admixture_Time_Inference_Paper/Results_Fig_1_2/Result_file_SIM_Raw_ALDER-Fit-Fig_2_B-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0.txt")
 Inferred_D_Sim_2$Demography <- "Inferred"
 Inferred_D_Sim_2$Recomb.rate <- "0_constant"
 Recom_Sim_1 <- Results_Table("~/Desktop/ATE_Paper/Admixture_Time_Inference_Paper/Results_Fig_1_2/Result_file_SIM_Raw_ALDER-Fit-Fig_2_C-GF_Model_IV-min_dist_Fit-0.02-ascertainment-0.txt")
@@ -641,7 +645,8 @@ Recom_Sim_and_Inf_1 <-  Results_Table("~/Desktop/ATE_Paper/Admixture_Time_Infere
 Recom_Sim_and_Inf_1$Demography <- "Inferred"
 Recom_Sim_and_Inf_1$Recomb.rate <- "variable"
 Recom_Sim_and_Inf_1$m <- Recom_Sim_and_Inf_1$m
-Recom_Sim_and_Inf_2 <-  Results_Table("~/Desktop/ATE_Paper/Admixture_Time_Inference_Paper/Results_Fig_1_2/Result_file_SIM_Raw_ALDER-Fit-Fig_2_D-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0.txt")
+Recom_Sim_and_Inf_2 <-  Results_Table("~/Desktop/ATE_Paper/Admixture_Time_Inference_Paper/Results_Fig_1_2/Result_file_SIM_Raw_ALDER-Fit-Fig_2_D_Complex_recomb_map_-GF_Model_IV-min_dist_Fit-0.02-ascertainment-0.txt")
+#Recom_Sim_and_Inf_2 <-  Results_Table("~/Desktop/ATE_Paper/Admixture_Time_Inference_Paper/Results_Fig_1_2/Result_file_SIM_Raw_ALDER-Fit-Fig_2_D-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0.txt")
 Recom_Sim_and_Inf_2$Demography <- "Inferred"
 Recom_Sim_and_Inf_2$Recomb.rate <- "variable"
 Recom_Sim_and_Inf_2$m <- Recom_Sim_and_Inf_2$m
